2003-02-13  olicha  <olivier.chapuis@free.fr>

	* FvwmButtons/draw.c (RedrawButton):
	Applied Remko Troncon negative frame fix

2003-02-05  Jason Weber  <baboon@imonk.com>

	* FvwmProxy/FvwmProxy.c:
	undefined actions now default to Nop instead of crashing
	windowname update now mostly ignored since we only display iconname
	iconname update now just redraws one window instead of reseting everything

2003-02-01  Dan Espen  <dane@mk.telcordia.com>

	* FvwmTaskBar/FvwmTaskBar.1: Typos.

2003-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
	fixed PageOnly option after a desk change

2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/readconfig.c (read_in_resources):
	fixed ShowOnlyIcons option

2003-01-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmAuto/FvwmAuto.c (main):
	fixed core dumps and errors in parsing of command line arguments
	fixed handling of leave action without an enter action

2003-01-06  Marcus Lundblad <ml@update.uu.se>

	* FvwmIconBox/FvwmIconBox.c (RedrawIcon, CreateWindow, ParseOptions):
	* FvwmIconBox/icons.c (AdjustIconWindow):
	implemented options for turning off parenthesisation of iconified
	window title and options for defining relief width and look for titles

	* FvwmIconBox/FvwmIconBox.1:
	documented options for turning off parenthesisation of iconified
	window title and options for defining relief width and look for titles

2003-01-04  Jason Weber  <baboon@imonk.com>

	* FvwmProxy/FvwmProxy.c:
	* FvwmProxy/FvwmProxy.1:
	added ShowToggle command to Show/Hide to the opposite of current state

2003-01-03  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPager/FvwmPager.c (list_new_page):
	updated to the changed arguments of M_NEW_PAGE

	* FvwmDebug/FvwmDebug.in:
	fixed printing to wrong stream
	* FvwmDebug/FvwmGtkDebug.in:
	fixed opening message windows

2002-12-30  Mikhael Goikhman  <migo@homemail.com>

	* FvwmWindowMenu/*:
	renamed from FvwmWindowLister;