@@ -1,3 +1,7 @@
+2003-02-15  Dan Espen  <dane@mk.telcordia.com>
+
+	* FvwmPager/x_pager.c (Scroll): Fix Pager going crazy on a button 3 drag.
+
 2003-02-13  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmButtons/draw.c (RedrawButton):
